--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@
 
 # Site
 title: zBlog
-subtitle: ''
+subtitle: '夢はいつでも, 僕らの前にある'
 description: ''
-keywords:
+keywords: 
 author: zzzhxxx
 language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://zzzhxxx.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
