--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,12 @@ jobs:
           persist-credentials: false
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
+          npm install hexo-cli -g
           npm install
+          hexo clean
           hexo steam -u
           hexo bangumi -u
-          npm run build
+          hexo g
         env:
           CI: false
       - name: Deploy 🚀
