--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,7 +11,7 @@ menu:
      音乐: /music/ || fas fa-music
      追番: /bangumis/ || fas fa-video
      摄影: /gallery/ || fas fa-camera-retro
-     游戏: /steamgames/ || fas fa-steam-square 
+     游戏: /steamgames/ || fas fa-steam
    友情链接: /link/ || fas fa-link
    关于: /about/ || fas fa-heart
 
